--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-[specify .env file here to hide your keys , currrently not hidden]
+[specify .env file here to hide your keys , currrently not Added]
+[specify nodeModules folder here , currrently not Added]
